# clean-code-api

./: README.md  pyproject.toml
src/: main.py
src/api/: figurinhas.py
src/domain/entities/: __init__.py  figurinha.py
src/handlers/: figurinha_handler.py
src/infra/: database.py
src/repository/: figurinha_repo.py  sqlite_figurinha_repo.py
src/service/: figurinha_service.py
