[project]
name = "clean-code-api"
version = "0.1.0"
description = "API para figurinhas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "pydantic>=2.10"]

[dependency-groups]
dev = ["pytest>=8.3", "httpx>=0.28"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
